# RawTherapee

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  RELEASE_NOTES.txt  UpdateInfo.cmake  build_mac.sh  build_win64.bat  test_rawengine.py  脚本运行.txt
.github/workflows/: appimage.yml  codeql.yml  macos.yml  windows.yml
cmake/: AboutThisBuild.cmake  Compile.cmake  Dependencies.cmake  StandardProjectSettings.cmake
cmake/modules/: FindTCMALLOC.cmake
demo_qt/: build_win64.bat
devnotes/: how-to-add-processing-tool.md
doc/: compare_report_5D3_R5_EOSP.xlsx  compare_report_5D3第一次.xlsx  compare_report_5D4_6D_6D2.xlsx  compare_report_5D4_7M4_7M5.xlsx  compare_report_A7M3.xlsx  compare_report_R6_R6M2_R8.xlsx  compare_report_d850_z62.xlsx  compare_report_兜底相机.xlsx
installer/: build.bat  build.sh  build_arm.sh  build_arm_gui.sh  build_gui.bat  build_gui.sh  build_intel.sh  build_intel_gui.sh  compare.py  readme.md  resource.md  test_rawengine.py
installer/output/: readme.md  readme_mac.md
licenses/: LibRaw_LICENSE  README
rtdata/: camconst.json  cammatrices.json
rtdata/languages/: Chinese (Simplified)  Hebrew  Korean  Nederlands  default
rtengine/: CMakeLists.txt  FTblockDN.cc  LibRaw-make.sh  LibRaw.cmake  amaze_demosaic_RT.cc  aspectratios.cc  aspectratios.h  boxblur.cc  boxblur.h  camconst.cc  camconst.json  capturesharpening.cc  ciecam02.cc  clutstore.cc  color.cc  color.h  cplx_wavelet_dec.h  curves.cc  curves.h  dcp.cc  dcraw.cc  dcraw.h  dcrop.cc  dcrop.h  demosaic_algos.cc  dfmanager.cc  dual_demosaic_RT.cc  dynamicprofile.cc  fast_demo.cc  ffmanager.cc  helpersse2.h  hphd_demosaic_RT.cc  iccstore.cc  image16.cc  image8.cc  imagedata.cc  imagedata.h  imagefloat.cc  imagefloat.h  imageio.cc  (+47 more)
rtengine/libraw/: configure.ac
rtengine/libraw/internal/: libraw_internal_funcs.h
rtengine/libraw/libraw/: libraw_types.h
rtengine/libraw/src/decoders/: decoders_dcraw.cpp  load_mfbacks.cpp
rtengine/libraw/src/metadata/: hasselblad_model.cpp  makernotes.cpp
rtengine/libraw/src/preprocessing/: raw2image.cpp
rtengine/libraw/src/tables/: colordata.cpp
rtengine/params/: locallab.cc  locallab.h  serdes.cc  serdes.h  threshold.h
rtengine/rawengine-cli/: main-cli.cc
rtgui/: CMakeLists.txt  addsetids.h  adjuster.cc  aspectratios.cc  batchqueue.cc  batchqueue.h  batchqueuebuttonset.cc  batchqueuebuttonset.h  batchqueueentry.cc  batchqueueentry.h  batchqueuepanel.cc  batchtoolpanelcoord.cc  batchtoolpanelcoord.h  bqentryupdater.cc  bqentryupdater.h  cacheimagedata.cc  cacheimagedata.h  cachemanager.cc  cachemanager.h  controlspotpanel.cc  controlspotpanel.h  crophandler.cc  crophandler.h  cropwindow.cc  cropwindow.h  curveeditorgroup.cc  curveeditorgroup.h  diagonalcurveeditorsubgroup.cc  dirbrowser.cc  drawcropguide.cc  drawcropguide.h  editcoordsys.h  editenums.h  editorpanel.cc  editorpanel.h  exportpanel.cc  externaleditorpreferences.h  extprog.cc  filebrowser.cc  filebrowser.h  (+69 more)
rtgui/tools/: bayerpreprocess.cc  bayerpreprocess.h  bayerprocess.cc  bayerprocess.h  bayerrawexposure.cc  bayerrawexposure.h  blackwhite.cc  blackwhite.h  cacorrection.h  chmixer.h  colorappearance.cc  colorappearance.h  colortoning.cc  colortoning.h  compressgamut.cc  compressgamut.h  crop.cc  crop.h  cropguide.cc  cropguide.h  darkframe.cc  defringe.cc  defringe.h  dehaze.h  dirpyrdenoise.cc  dirpyrdenoise.h  dirpyrequalizer.h  distortion.h  epd.h  fattaltonemap.h  filmnegative.cc  filmnegative.h  filmsimulation.cc  filmsimulation.h  flatfield.cc  flatfield.h  framing.cc  framing.h  gradient.h  hsvequalizer.cc  (+53 more)
rtgui/widgets/basic/: adjuster.cc  adjuster.h  coloredbar.h  colorpreview.cc  coordinateadjuster.cc  shcselector.cc  shcselector.h  thresholdadjuster.cc  thresholdselector.cc
rtgui/widgets/curves/: curveeditor.cc  curveeditorgroup.cc  curveeditorgroup.h  diagonalcurveeditorsubgroup.cc  diagonalcurveeditorsubgroup.h  flatcurveeditorsubgroup.cc  mycurve.h
rtgui/windows/: editwindow.cc  iccprofilecreator.cc  iccprofilecreator.h  partialpastedlg.cc  partialpastedlg.h  preferences.cc  preferences.h  rtwindow.cc  saveasdlg.cc  splash.cc  splash.h
tools/: buildRT.bat
tools/makedeb/: PKGBUILD.libjxl
tools/osx/: macosx_bundle.sh  rawtherapee.icns
tools/win/InnoSetup/: WindowsInnoSetup.iss.in
